# clarus

./: .gitignore  Cargo.toml  README.md
benches/: bgzf_benchmark.rs  json_serialization.rs  reference_reader.rs
configurations/cache/: GRCh38_20260221.json  GRCh38_v1.json
configurations/reference/: GRCh38.p14.json
data/cache/: GRCh38_v1.json
docs/clarus/: fast_json_serialization.md
docs/clarus/benchmarks/: fast_bgzf_parsing.md
docs/create_cache/: bin_data_quantities.md  transcript_evaluation_issues.md
docs/reference/: chromosome_bands_ncbi.md
src/: assembly_report.rs  bands.rs  biotype.rs  canonical.rs  chromosome.rs  cli.rs  codon.rs  config.rs  download.rs  error.rs  fasta.rs  genbank.rs  genome_assembly.rs  hgnc.rs  hgvsg.rs  lib.rs  mirna.rs  perf.rs  sequence.rs  strand.rs  vlq.rs
src/cache/: bin.rs  index.rs  mod.rs  serialize.rs  writer.rs
src/evaluation/: alignment.rs  diagnostics.rs  frame_correction.rs  mod.rs  selenoprotein.rs  slippage.rs
src/gff3/: ensembl_hierarchy.rs  ensembl_parser.rs  entry.rs  hierarchy.rs  mod.rs  parser.rs  refseq_hierarchy.rs  refseq_parser.rs
src/json/: mod.rs  types.rs  writer.rs
src/pipeline/: ensembl.rs  mod.rs  refseq.rs
src/reference/: binary_io.rs  common_header.rs  mod.rs  reader.rs  writer.rs
src/transcript/: construction.rs  mod.rs  types.rs
src/variant/: categorize.rs  mod.rs  normalize.rs  types.rs  vid.rs
src/vcf/: assembly_inference.rs  bgzf.rs  bgzf_stream.rs  header.rs  info.rs  mod.rs  reader.rs  record.rs  sample.rs  streaming_reader.rs
