[package]
name = "clarus"
version = "0.1.0"
edition = "2024"
description = "High-performance genomic variant annotation and VUS resolution engine"
license = "GPL-3.0"
repository = "https://github.com/MichaelStromberg/clarus"
exclude = [
    "docs/specifications/*"
]

[dependencies]
thiserror = "2"
flate2 = "1"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
sha2 = "0.10"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "reference_reader"
harness = false
