[package]
name = "clarus"
version = "0.1.0"
edition = "2024"
description = "High-performance genomic variant annotation and VUS resolution engine"
license = "GPL-3.0"
repository = "https://github.com/MichaelStromberg/clarus"
exclude = [
    "docs/specifications/*"
]

[dependencies]
thiserror = "2"
flate2 = "1"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
sha2 = "0.10"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
ureq = "3"
noodles-bgzf = { version = "0.46", features = ["libdeflate"] }
bgzip = { version = "0.3", default-features = false, features = ["rust_backend"] }
gzp = { version = "2", default-features = false, features = ["libdeflate", "deflate_rust"] }
libdeflater = "1"
rayon = "1"
comfy-table = "7"
bytecount = "0.6"
memchr = "2"
chrono = "0.4"
sonic-rs = "0.5"
simd-json = { version = "0.17", features = ["serde_impl"] }
itoa = "1"
ryu = "1"
dhat = { version = "0.3", optional = true }

[features]
default = ["flate2/zlib-ng-compat"]
bench-zlib-rs = ["flate2/zlib-rs"]
bench-zlib-ng = ["flate2/zlib-ng-compat"]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "reference_reader"
harness = false

[[bench]]
name = "bgzf_benchmark"
harness = false

[[bench]]
name = "json_serialization"
harness = false

[profile.profiling]
inherits = "release"
debug = true
strip = false
